# QuASK

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  README.rst  evaluate_gram_matrices.py  generate_data.py  generate_gram_matrices.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  synthetic_test.py  synthetic_test_rl.py  tentative.py  test.py  x_data_minmax_7.20e+05_train.npy  x_train_higgs_600_2
core/: kernel.py  kernel_factory.py  kernel_type.py
core_implementation/: __init__.py  braket_kernel.py  pennylane_kernel.py  qibo_kernel.py  qiskit_kernel.py
darqk/: kernel_optimizer.py
darqk/core/: __init__.py  ansatz.py  kernel.py  kernel_type.py  operation.py
darqk/core_implementation/: __init__.py  pennylane_kernel.py
darqk/evaluator/: __init__.py  centered_kernel_alignment_evaluator.py  covering_number_evaluator.py  haar_evaluator.py  kernel_alignment_evaluator.py  lie_rank_evaluator.py  ridge_generalization_evaluator.py  spectral_bias_evaluator.py
darqk/optimizer/: __init__.py  base_kernel_optimizer.py  bayesian_optimizer.py  reinforcement_learning_optimizer.py
darqk/tests/: kernel_test.py
docs/: requirements.txt
docs/homepage/: index.html
docs/source/: changelog.rst  conf.py  contact_us.rst  contribute.rst  getting_started.rst  how_to_use.rst  index.rst  installation.rst  license.rst  modules.rst  platform_overview.rst  publications.rst  quask.rst
docs/source/notebooks/: applications_1_proton_collision.ipynb  classical_1_linear_to_kernel.ipynb  classical_2_kernel_functions.ipynb  classical_3_svm.ipynb  getting_started.ipynb  quantum_0_intro.ipynb  quantum_1_expressibility.ipynb  quantum_1_intro.ipynb  quantum_2_projected.ipynb  quantum_2_projected_1.ipynb  quantum_3_spectralbias.ipynb  quantum_4_concentration.ipynb  quantum_5_beyondnisq.ipynb  quask_0_backends.ipynb  quask_1_evaluators.ipynb  quask_1_preprocessing.ipynb  quask_2_evaluators.ipynb  quask_2_optimizers.ipynb  quask_3_optimizers.ipynb  quask_4_ensemble.ipynb
docs/source/tutorials_applications/: applications_1_proton_collision.rst  index.rst
docs/source/tutorials_classical/: classical_1_linear_to_kernel.rst  classical_2_kernel_functions.rst  classical_3_svm.rst  index.rst
docs/source/tutorials_quantum/: index.rst  quantum_0_intro.rst  quantum_1_expressibility.rst  quantum_2_projected.rst  quantum_3_spectralbias.rst  quantum_4_beyondnisq.rst
docs/source/tutorials_quask/: index.rst  quask_0_backends.rst  quask_1_evaluators.rst  quask_1_preprocessing.rst  quask_2_optimizers.rst  quask_3_optimizers.rst  quask_5_cli.rst
evaluator/: __init__.py  centered_kernel_alignment_evaluator.py  ess_model_complexity_evaluator.py  geometric_difference_evaluator.py  haar_evaluator.py  lie_rank_evaluator.py  spectral_bias_evaluator.py
old_files/: Tutorial_Task_Model_Alignment.ipynb  generators.py  generators2.py  haar.py  main.py  metrics.py  pqc.py  taskmodelalign.py
optimizer/: base_kernel_optimizer.py  reinforcement_learning_optimizer.py  wide_kernel_environment.py
quask/: __init__.py  __main__.py  datasets.py  kernels.py  metrics.py  template_pennylane.py  template_qiskit.py_old  test_projected.py  trainable_kernels.py
quask/resources/: y_Q_Fashion-MNIST_720_8_E3
quask/techniques/: combinatorial_kernel.py  combinatorial_kernel_genetic.py  combinatorial_kernel_greedy.py  combinatorial_kernel_simanneal.py  random_kernel.py  scrambled_kernel.py  x_train_higgs_100_8
resources/: X_Q_Fashion-MNIST_720_2_E1  y_Q_Fashion-MNIST_720_2_E1  y_Q_Fashion-MNIST_720_4_E2
src/: evaluate_gram_matrices.py  get_data.py
src/quask/: __init__.py  __main__.py  datasets.py  kernels.py  metrics.py  observable.py  template_pennylane.py  template_qiskit.py  trainable_kernels.py  utils.py
src/quask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quask/core/: ansatz.py  kernel.py  kernel_factory.py
src/quask/core_implementation/: __init__.py  pennylane_kernel.py  qibo_kernel.py  qiskit_kernel.py
src/quask/evaluator/: __init__.py  centered_kernel_alignment_evaluator.py  ess_model_complexity_evaluator.py  geometric_difference_evaluator.py  haar_evaluator.py  kernel_alignment_evaluator.py  kernel_evaluator.py  ridge_generalization_evaluator.py  spectral_bias_evaluator.py
src/quask/optimizer/: __init__.py  base_kernel_optimizer.py  bayesian_optimizer.py  greedy_optimizer.py  metaheuristic_optimizer.py  reinforcement_learning_optimizer.py  wide_kernel_environment.py
src/quask/resources/: X_Q_Fashion-MNIST_720_4_E2  X_Q_Fashion-MNIST_720_8_E3  background_subsampled.npy  signal_AtoH_to_ZZZ_subsampled.npy
src/quask/techniques/: combinatorial_kernel.py  (+3 more)
test_francesco/: test_projected.py
tests/: test_example.py  test_pennylane_kernel.py
(+9 files in other folders)
