[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quask"
version = "1.0.0-beta"
authors = [
  { name="Massimiliano Incudini", email="massimiliano.incudini@univr.it" },
  { name="Francesco Di Marcantonio", email="francesco.di.marcantonio@cern.ch" },
  { name="Michele Grossi", email="michele.grossi@cern.ch" },
]
description = "A software framework to speed up the research in quantum machine learning"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
        "Operating System :: Unix",
        "Topic :: Scientific/Engineering :: Physics",
        "Programming Language :: Python :: 3.9",
]
dynamic = ["version", "description","dependencies"]

[project.urls]
"Homepage" = "https://github.com/CERN-IT-INNOVATION/QuASK"
"Bug Tracker" = "https://github.com/CERN-IT-INNOVATION/QuASK/issues"