[metadata]
name = quask
version = 1.0.0
author_1 = F. Di Marcantonio
author_email_1 = francesco.di.marcantonio@cern.ch
author_2 = M. Grossi
author_email_2 = michele.grossi@cern.ch
author_3 = M. Incudini 
author_email_3 = massimiliano.incudini@univr.it
description = Quantum Advantage Seeker with Kernel medhods with Python
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/QML-HEP/projected_kernel.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    numpy>=1.22
    jax
    sklearn
    scipy
    matplotlib
    qiskit[machine-learning]
    pennylane
    imblearn
    click

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7