[metadata]
name = quask
version = 1.0.1
author = M. Incudini, F Di Marcantonio, M. Grossi
author_email = massimiliano.incudini@univr.it, francesco.di.marcantonio@cern.ch, michele.grossi@cern.ch
description = Quantum Advantage Seeker with Kernels
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/CERN-IT-INNOVATION/QuASK
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
package_dir =
    = src
packages=find:
python_requires = >=3.9
install_requires =
    matplotlib
    numpy
    scipy
    click
    scikit-learn
    imbalanced-learn
    prince
    openml
    jax
    jaxlib
    PennyLane
    PennyLane-qiskit
    simanneal
    optax

[options.packages.find]
where = src

[options.extras_require]
demo =
    jupyter
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7
    sphinx-autoapi>=2.0.1
