[metadata]
name = quask
version = 2.0.0-alpha1
author = Massimiliano Incudini, Francesco Di Marcantonio, Michele Grossi
author_email = massimiliano.incudini@univr.it
description = Quantum Advantage Seeker with Kernels (QuASK): a software framework to speed up the research in quantum machine learning
license_files = LICENSE
url = https://github.com/CERN-IT-INNOVATION/QuASK
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
install_requires =
    pennylane==0.33.1
    pytest>=7.4.3
    numpy>=1.23.5
    pandas>=2.1.2
    scikit-learn>=1.3.1
    scipy>=1.11.2

[options.packages.find]
where = src

[options.extras_require]
demo =
    jupyter
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7
    sphinx-autoapi>=2.0.1